Swagger implemented
